src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;


*{
    box-sizing: border-box;
}


body{
    margin: 0;
    padding: 0;
    font-family: "PT Serif", serif;
    font-weight: 400;

    /* background-color: #c3cbdc;
    background-image: linear-gradient(147deg, #c3cbdc 0%, #edf1f4 74%); */
    
    background-color: #20242D;
    color: #20242D;

    
    


}


.backface-invisible {
  backface-visibility: hidden;
}




.background{
  /* background-color: #D8E1E9;
  background: rgb(68,176,158);
  background: linear-gradient(106deg, rgba(68,176,158,1) 64%, rgba(216,225,233,1) 100%);

  background: rgb(68,176,158);
background: linear-gradient(152deg, rgba(68,176,158,1) 40%, rgba(224,210,199,1) 78%); */

background: rgb(68,176,158);
background: linear-gradient(152deg, rgba(68,176,158,1) 48%, rgba(224,210,199,1) 85%);

}

.sky{
  background-color: #44b09e;
  background-image: linear-gradient(315deg, #44b09e 0%, #e0d2c7 74%);

}

.text{
  background-color: black;
  
}


button{
    outline: 0;
}


img{display: inline-block;}

/* HTML: <div class="loader"></div> */
.loader {
  width: 50px;
  padding: 8px;
  aspect-ratio: 1;
  border-radius: 50%;
  background: #20242D;
  --_m: 
    conic-gradient(#0000 10%,#000),
    linear-gradient(#000 0 0) content-box;
  -webkit-mask: var(--_m);
          mask: var(--_m);
  -webkit-mask-composite: source-out;
          mask-composite: subtract;
  animation: l3 1s infinite linear;
}
@keyframes l3 {to{transform: rotate(1turn)}}

.link{
  color: #0000EE;
}

@keyframes slide {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-100%);
  }
}

.logos {
  overflow: hidden;
  white-space: nowrap;
  
}

.logos-slide {
    display: inline-block;
    animation: 8s slide infinite linear;
  }

